# JiosaavnDownloader

./: .gitignore  README.md  config.example.toml  config.toml  database.pkl  development.ipynb  pyproject.toml
.github/workflows/: test.yml-NOTUSED
src/jiosaavn/: Cacher.py  Slack.py  __init__.py  api_parser.py  cli_app.py  credentials.py  debugger.py  file_parser.py  logger.py  main.py  request_package.py
src/jiosaavn/API/: SaavnMe_Parser.py  __init__.py
src/jiosaavn/notify/: Gotify.py  Slack.py
src/jiosaavn/utils/: __init__.py  cacher.py  credentials.py  file.py  logger.py
src/template_python/: Slack.py  __init__.py  cli_app.py  request_package.py
src/tests/: test_config.py  test_credentials.py
src/tests/API/: test_SaavnMe_Parser.py
