[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jiosaavn"
authors = [{name = "Arun Kishore", email = "pypi@rpakishore.co.in"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "ak_cache",
    "typer[all]",   #cli_app.py
    "icecream",     
    "slack_sdk",    #Slack.py
    "ak_requests",   #request_package
    "beautifulsoup4",   #request_package
    "ffmpy",
    "eyed3",
    "keyring","brotlipy"
]

[project.optional-dependencies]
test = [
    "pytest",
    "ipykernel"
]

[project.urls]
Home = "https://github.com/rpakishore/Template-Python"

[project.scripts]
app="jiosaavn.cli_app:app"