[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jiosaavn"
authors = [{name = "Arun Kishore", email = "pypi@rpakishore.co.in"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "typer[all]",
    "icecream==2.1.3",     
    "slack_sdk==3.26.1",
    "ak_requests==0.1.0",
    "ffmpy==0.3.1",
    "eyed3==0.9.7",
    "keyring==24.3.0",
    "brotlipy"
]

[project.optional-dependencies]
test = [
    "pytest",
    "ipykernel"
]

[project.urls]
Home = "https://github.com/rpakishore/Template-Python"

[project.scripts]
jiosaavn="jiosaavn.cli_app:app"